# ptgbot

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  Dockerfile  README.rst  base.json  config.ini.sample  config.json.sample  init.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
html/: etherpads.html  index.html  index.js  motd.js  ptg.html  ptg.js  signage.html
ptgbot/: admincommands.py  bot.py  db.py  ethercalc.py  ics.py  trackcommands.py  usercommands.py  web.py
ptgbot/html/: ptg.html  signage.html
ptgbot/tests/: test_message_process.py
scripts/: add_realtime.py
