[metadata]
name = ptgbot
summary = OpenStack PTG Bot
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = https://opendev.org/openstack/ptgbot
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    ptgbot = ptgbot.bot:main
